@@ -118,7 +118,7 @@
 
 	<!-- ###SUB_INCLUDED_FIELD_status### -->
 	<dt>
-		<label for="tx-srfeuserregister-pi1-status">###LABEL_STATUS###</label>
+		<label for="tx-srfeuserregister-pi1-status" onclick="document.getElementById(this.htmlFor).focus(); return false;">###LABEL_STATUS###</label>
 		<span class="tx-srfeuserregister-pi1-required">###REQUIRED_STATUS###</span>
 	</dt>
 	<dd>
@@ -230,7 +230,7 @@
 
 	<!-- ###SUB_INCLUDED_FIELD_static_info_country### -->
 	<dt>
-		<label for="tx-srfeuserregister-pi1-static_info_country">###LABEL_COUNTRY###</label>
+		<label for="tx-srfeuserregister-pi1-static_info_country" onclick="document.getElementById(this.htmlFor).focus(); return false;">###LABEL_COUNTRY###</label>
 		<span class="tx-srfeuserregister-pi1-required">###REQUIRED_STATIC_INFO_COUNTRY###</span>
 	</dt>
 	<dd>
@@ -243,7 +243,7 @@
 
 	<!-- ###SUB_INCLUDED_FIELD_zone### -->
 	<dt>
-		<label for="tx-srfeuserregister-pi1-zone">###LABEL_ZONE###</label>
+		<label for="tx-srfeuserregister-pi1-zone" onclick="document.getElementById(this.htmlFor).focus(); return false;">###LABEL_ZONE###</label>
 		<span class="tx-srfeuserregister-pi1-required">###REQUIRED_ZONE###</span>
 	</dt>
 	<dd>
@@ -320,7 +320,7 @@
 
 	<!-- ###SUB_INCLUDED_FIELD_usergroup### -->
 	<dt>
-		<label for="tx-srfeuserregister-pi1-usergroup">###LABEL_USERGROUP###</label>
+		<label for="tx-srfeuserregister-pi1-usergroup" onclick="document.getElementById(this.htmlFor).focus(); return false;">###LABEL_USERGROUP###</label>
 		<span class="tx-srfeuserregister-pi1-required">###REQUIRED_USERGROUP###</span>
 	</dt>
 	<dd>
@@ -359,13 +359,13 @@
 		<!-- ###SUB_REQUIRED_FIELD_module_sys_dmail_html### -->
 		<p class="tx-srfeuserregister-pi1-error">###MISSING_MODULE_SYS_DMAIL_HTML###</p>
 		<!-- ###SUB_REQUIRED_FIELD_module_sys_dmail_html### -->
-		<input id="tx-srfeuserregister-pi1-module_sys_dmail_html" type="checkbox" name="FE[fe_users][module_sys_dmail_html]" value="1" />
+		<input id="tx-srfeuserregister-pi1-module_sys_dmail_html" type="checkbox" name="FE[fe_users][module_sys_dmail_html]" value="1" class="tx-srfeuserregister-pi1-checkbox" />
 	</dd>
 	<!-- ###SUB_INCLUDED_FIELD_module_sys_dmail_html### -->
 
 	<!-- ###SUB_INCLUDED_FIELD_language### -->
 	<dt>
-		<label for="tx-srfeuserregister-pi1-language">###LABEL_LANGUAGE###</label>
+		<label for="tx-srfeuserregister-pi1-language" onclick="document.getElementById(this.htmlFor).focus(); return false;">###LABEL_LANGUAGE###</label>
 		<span class="tx-srfeuserregister-pi1-required">###REQUIRED_LANGUAGE###</span>
 	</dt>
 	<dd>
@@ -759,7 +759,7 @@ The user is informed that a message has been sent to his email address and that 
 
 	<!-- ###SUB_INCLUDED_FIELD_status### -->
 	<dt>
-		<label for="tx-srfeuserregister-pi1-status">###LABEL_STATUS###</label>
+		<label for="tx-srfeuserregister-pi1-status" onclick="document.getElementById(this.htmlFor).focus(); return false;">###LABEL_STATUS###</label>
 		<span class="tx-srfeuserregister-pi1-required">###REQUIRED_STATUS###</span>
 	</dt>
 	<dd>
@@ -871,7 +871,7 @@ The user is informed that a message has been sent to his email address and that 
 
 	<!-- ###SUB_INCLUDED_FIELD_static_info_country### -->
 	<dt>
-		<label for="tx-srfeuserregister-pi1-static_info_country">###LABEL_COUNTRY###</label>
+		<label for="tx-srfeuserregister-pi1-static_info_country" onclick="document.getElementById(this.htmlFor).focus(); return false;">###LABEL_COUNTRY###</label>
 		<span class="tx-srfeuserregister-pi1-required">###REQUIRED_STATIC_INFO_COUNTRY###</span>
 	</dt>
 	<dd>
@@ -884,7 +884,7 @@ The user is informed that a message has been sent to his email address and that 
 
 	<!-- ###SUB_INCLUDED_FIELD_zone### -->
 	<dt>
-		<label for="tx-srfeuserregister-pi1-zone">###LABEL_ZONE###</label>
+		<label for="tx-srfeuserregister-pi1-zone" onclick="document.getElementById(this.htmlFor).focus(); return false;">###LABEL_ZONE###</label>
 		<span class="tx-srfeuserregister-pi1-required">###REQUIRED_ZONE###</span>
 	</dt>
 	<dd>
@@ -961,7 +961,7 @@ The user is informed that a message has been sent to his email address and that 
 
 	<!-- ###SUB_INCLUDED_FIELD_usergroup### -->
 	<dt>
-		<label for="tx-srfeuserregister-pi1-usergroup">###LABEL_USERGROUP###</label>
+		<label for="tx-srfeuserregister-pi1-usergroup" onclick="document.getElementById(this.htmlFor).focus(); return false;">###LABEL_USERGROUP###</label>
 		<span class="tx-srfeuserregister-pi1-required">###REQUIRED_USERGROUP###</span>
 	</dt>
 	<dd>
@@ -1000,13 +1000,13 @@ The user is informed that a message has been sent to his email address and that 
 		<!-- ###SUB_REQUIRED_FIELD_module_sys_dmail_html### -->
 		<p class="tx-srfeuserregister-pi1-error">###MISSING_MODULE_SYS_DMAIL_HTML###</p>
 		<!-- ###SUB_REQUIRED_FIELD_module_sys_dmail_html### -->
-		<input id="tx-srfeuserregister-pi1-module_sys_dmail_html" type="checkbox" name="FE[fe_users][module_sys_dmail_html]" value="1" />
+		<input id="tx-srfeuserregister-pi1-module_sys_dmail_html" type="checkbox" name="FE[fe_users][module_sys_dmail_html]" value="1" class="tx-srfeuserregister-pi1-checkbox" />
 	</dd>
 	<!-- ###SUB_INCLUDED_FIELD_module_sys_dmail_html### -->
 
 	<!-- ###SUB_INCLUDED_FIELD_language### -->
 	<dt>
-		<label for="tx-srfeuserregister-pi1-language">###LABEL_LANGUAGE###</label>
+		<label for="tx-srfeuserregister-pi1-language" onclick="document.getElementById(this.htmlFor).focus(); return false;">###LABEL_LANGUAGE###</label>
 		<span class="tx-srfeuserregister-pi1-required">###REQUIRED_LANGUAGE###</span>
 	</dt>
 	<dd>
@@ -1332,7 +1332,7 @@ The user is informed that a message has been sent to the email address and that 
 
 	<!-- ###SUB_INCLUDED_FIELD_status### -->
 	<dt>
-		<label for="tx-srfeuserregister-pi1-status">###LABEL_STATUS###</label>
+		<label for="tx-srfeuserregister-pi1-status" onclick="document.getElementById(this.htmlFor).focus(); return false;">###LABEL_STATUS###</label>
 		<span class="tx-srfeuserregister-pi1-required">###REQUIRED_STATUS###</span>
 	</dt>
 	<dd>
@@ -1444,7 +1444,7 @@ The user is informed that a message has been sent to the email address and that 
 
 	<!-- ###SUB_INCLUDED_FIELD_static_info_country### -->
 	<dt>
-		<label for="tx-srfeuserregister-pi1-static_info_country">###LABEL_COUNTRY###</label>
+		<label for="tx-srfeuserregister-pi1-static_info_country" onclick="document.getElementById(this.htmlFor).focus(); return false;">###LABEL_COUNTRY###</label>
 		<span class="tx-srfeuserregister-pi1-required">###REQUIRED_STATIC_INFO_COUNTRY###</span>
 	</dt>
 	<dd>
@@ -1457,7 +1457,7 @@ The user is informed that a message has been sent to the email address and that 
 
 	<!-- ###SUB_INCLUDED_FIELD_zone### -->
 	<dt>
-		<label for="tx-srfeuserregister-pi1-zone">###LABEL_ZONE###</label>
+		<label for="tx-srfeuserregister-pi1-zone" onclick="document.getElementById(this.htmlFor).focus(); return false;">###LABEL_ZONE###</label>
 		<span class="tx-srfeuserregister-pi1-required">###REQUIRED_ZONE###</span>
 	</dt>
 	<dd>
@@ -1534,7 +1534,7 @@ The user is informed that a message has been sent to the email address and that 
 
 	<!-- ###SUB_INCLUDED_FIELD_usergroup### -->
 	<dt>
-		<label for="tx-srfeuserregister-pi1-usergroup">###LABEL_USERGROUP###</label>
+		<label for="tx-srfeuserregister-pi1-usergroup" onclick="document.getElementById(this.htmlFor).focus(); return false;">###LABEL_USERGROUP###</label>
 		<span class="tx-srfeuserregister-pi1-required">###REQUIRED_USERGROUP###</span>
 	</dt>
 	<dd>
@@ -1573,13 +1573,13 @@ The user is informed that a message has been sent to the email address and that 
 		<!-- ###SUB_REQUIRED_FIELD_module_sys_dmail_html### -->
 		<p class="tx-srfeuserregister-pi1-error">###MISSING_MODULE_SYS_DMAIL_HTML###</p>
 		<!-- ###SUB_REQUIRED_FIELD_module_sys_dmail_html### -->
-		<input id="tx-srfeuserregister-pi1-module_sys_dmail_html" type="checkbox" name="FE[fe_users][module_sys_dmail_html]" value="1" />
+		<input id="tx-srfeuserregister-pi1-module_sys_dmail_html" type="checkbox" name="FE[fe_users][module_sys_dmail_html]" value="1" class="tx-srfeuserregister-pi1-checkbox" />
 	</dd>
 	<!-- ###SUB_INCLUDED_FIELD_module_sys_dmail_html### -->
 
 	<!-- ###SUB_INCLUDED_FIELD_language### -->
 	<dt>
-		<label for="tx-srfeuserregister-pi1-language">###LABEL_LANGUAGE###</label>
+		<label for="tx-srfeuserregister-pi1-language" onclick="document.getElementById(this.htmlFor).focus(); return false;">###LABEL_LANGUAGE###</label>
 		<span class="tx-srfeuserregister-pi1-required">###REQUIRED_LANGUAGE###</span>
 	</dt>
 	<dd>
