@@ -190,13 +190,13 @@ plugin.tx_srfeuserregister_pi1 {
 	notify.SETFIXED_REFUSE =  {$plugin.tx_srfeuserregister_pi1.enableAdminNotifyOnRefuse}
 
 	_CSS_DEFAULT_STYLE (
-		.tx-srfeuserregister-pi1  { font-family:Verdana, sans-serif; }
-		.tx-srfeuserregister-pi1 p { font-size: 12px; line-height: 125%; color: #35006d; margin-top: .5em; margin-bottom: 0; padding: 0 .3em; text-indent: 0; }
+		.tx-srfeuserregister-pi1  { font-family:Verdana, sans-serif; line-height: 125%; color: #35006d; font-size: 1em; }
+		.tx-srfeuserregister-pi1 p { margin-top: .5em; margin-bottom: 0; padding: 0 .3em; text-indent: 0; }
 		.tx-srfeuserregister-pi1 a:link { background-color:transparent; color:navy; text-decoration:none; font-weight:bold;}
 		.tx-srfeuserregister-pi1 a:visited { color:navy; }
 		.tx-srfeuserregister-pi1 a:hover { color:#333333; }
 		.tx-srfeuserregister-pi1 a:active { color:navy; }
-		.tx-srfeuserregister-pi1 label { margin: 0; padding: 0; }
+		.tx-srfeuserregister-pi1 label { margin: 0; padding: 0; font-size: 1em; }
 		.tx-srfeuserregister-pi1 input { font-size: 10px;  background-color: #35006d; color: #ffffff; font-weight: bold; margin: 0; padding: 0 .5em 0 0; }
 		.tx-srfeuserregister-pi1 input[type=text]  { width: 25em; }
 		* html .tx-srfeuserregister-pi1 input.tx-srfeuserregister-pi1-text  { width: 25em; }
@@ -209,23 +209,27 @@ plugin.tx_srfeuserregister_pi1 {
 		.tx-srfeuserregister-pi1 a.tx-srfeuserregister-pi1-file-view { font-size: .8em; margin-left: .6em; }
 		.tx-srfeuserregister-pi1 select { font-size: 10px;  background-color: #35006d; color: #ffffff; font-weight: bold; }
 		.tx-srfeuserregister-pi1 textarea { font-size: 10px;  background-color: #35006d; color: #ffffff; font-weight: bold; }
-		.tx-srfeuserregister-pi1 ul { margin: 0; padding: 0; }
-		.tx-srfeuserregister-pi1 ul.tx-srfeuserregister-multiple-checkboxes { list-style-type: none; list-style-image: none; list-style-position: inside; font-size: 1em; }
-		.tx-srfeuserregister-pi1 ul.tx-srfeuserregister-multiple-checkboxes li { margin: 0 0 .4em 0; }
-		.tx-srfeuserregister-pi1 ul.tx-srfeuserregister-multiple-checkboxes li label { margin: 0; padding: 0 0 0 .5em; font-size: 1em; }
-		.tx-srfeuserregister-pi1 ul.tx-srfeuserregister-multiple-checked-values { list-style-type: square; list-style-image: none; list-style-position: inside; margin: 0; font-size: 1em; }
+		.tx-srfeuserregister-pi1 ul { margin: 0; padding: 0; list-style-image: none; list-style-position: inside; font-size: 1em; }
+		.tx-srfeuserregister-pi1 ul.tx-srfeuserregister-multiple-checkboxes { list-style-type: none; }
+		.tx-srfeuserregister-pi1 ul.tx-srfeuserregister-multiple-checkboxes li { margin: 0 0 .3em 0; padding: 0; }
+		.tx-srfeuserregister-pi1 ul.tx-srfeuserregister-multiple-checkboxes li label { margin: 0; padding: 0 0 0 .5em; }
+		.tx-srfeuserregister-pi1 ul.tx-srfeuserregister-multiple-checked-values { list-style-type: square; }
 		.tx-srfeuserregister-pi1 ul.tx-srfeuserregister-multiple-checked-values li { float: left; margin: 0 2em 0 0;}
 		.tx-srfeuserregister-pi1 .tx-srfeuserregister-pi1-notice { margin-bottom: 1em; font-style: italic; }
 		.tx-srfeuserregister-pi1 .tx-srfeuserregister-pi1-required { color: #FF0000; }
 		.tx-srfeuserregister-pi1 .tx-srfeuserregister-pi1-error { color: #FF0000; font-weight: bold; }
 		.tx-srfeuserregister-pi1 .tx-srfeuserregister-pi1-trash { margin-bottom: 2em; }
-		.tx-srfeuserregister-pi1 dl { margin: 0 5%; padding: 1em 0 0 0; }
-		.tx-srfeuserregister-pi1 dt, .tx-srfeuserregister-pi1 dd { margin: 0; padding: 0 0 1em 0; }
+		.tx-srfeuserregister-pi1 dl { margin: 0 5%; padding: 1em 0 0 0; display: block; }
+		* html .tx-srfeuserregister-pi1 dl { margin: 0; padding: 1em 4% 0 4%;}
+		.tx-srfeuserregister-pi1 dt, .tx-srfeuserregister-pi1 dd { margin: 0; padding: 0 0 .5em 0; display: block; }
 		.tx-srfeuserregister-pi1 dt { float: left; clear: both; width: 25%; text-align: right; }
+		* html .tx-srfeuserregister-pi1 dt { padding-right: 1em; }
 		.tx-srfeuserregister-pi1 dd { text-align: left; float: right; clear: right; width: 73%; font-weight: bold; }
+		* html .tx-srfeuserregister-pi1 dd { float: none; clear: none; }
 		.tx-srfeuserregister-pi1 dd p { margin-top: 0; margin-bottom: .5em; padding: 0; }
-		.tx-srfeuserregister-pi1 dd label { padding: 0 1em 0 .5em; }		
+		.tx-srfeuserregister-pi1 dd label { padding: 0 1em 0 .5em; }
 		.tx-srfeuserregister-pi1 .clear-float { clear: both; }
+		.tx-srfeuserregister-pi1 button { color: #35006d; }
 	)
 
 	_DEFAULT_PI_VARS {
